Add string resources and enable localization for UI titles
Replaced hardcoded UI titles in layout files with string resources to support localization. Added English translations in a new values-en/strings.xml file and updated the default strings.xml with corresponding keys and Spanish values.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
+    <!--Titulos de las pantallas-->
     <string name="app_name">Lavacar</string>
+    <string name="menu_title">Lavacar Sistema</string>
+    <string name="menu_customers">Clientes</string>
+    <string name="menu_employees">Empleados</string>
+    <string name="menu_cars">Carros</string>
+    <string name="menu_services">Servicios</string>
+    <string name="menu_invoice">Factura</string>
 </resources>
