Use string resources for search hints and menu titles
Replaced hardcoded search bar hints in activity layouts with references to a new string resource 'serch_barra' for localization. Added new menu title string resources in both English and Spanish, and updated MainActivity to use these resources for menu titles.

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -7,4 +7,13 @@
     <string name="menu_cars">Cars</string>
     <string name="menu_services">Services</string>
     <string name="menu_invoice">Invoice</string>
+
+    <!--Opciones del Menu-->
+    <string name="menus_customers">Clients</string>
+    <string name="menus_employees">Employees</string>
+    <string name="menus_cars">Cars</string>
+    <string name="menus_services">Services</string>
+    <string name="menus_invoice">Invoice</string>
+
+    <string name="serch_barra">Serch</string>
 </resources>
