Add photo and audio support for Cliente records
Extended Cliente database schema to include photo and audio BLOB fields. Updated InsertCliente and UpdateCliente activities and layouts to allow capturing, saving, and displaying client photos and audio recordings. Added necessary permissions to AndroidManifest and updated string resources for new UI elements.

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -47,6 +47,6 @@
     <string name="info_nombre_servicio">Service Name</string>
     <string name="hint_cantidad">Quantity</string>
     <string name="info_subtotal">Subtotal: 0</string>
-
     <string name="btn_guardar_factura">Save Invoice</string>
+    <string name="btn_tomarfoto">Take Photo</string>
 </resources>
